appId: com.nextwork.app
---
- launchApp
- tapOn:
    id: tab-groups
- assertVisible: Groups
- tapOn: ${GROUP_NAME}
- tapOn: About
- tapOn: Members
- tapOn: Invite
- tapOn: Find colleagues
- inputText: ${INVITEE_NAME}
- assertVisible: Invite
