appId: com.nextwork.app
---
- launchApp
- tapOn:
    id: tab-home
- assertVisible: Your feed
- tapOn:
    id: tab-groups
- assertVisible: Groups
- tapOn:
    id: tab-chats
- assertVisible: Chats
- tapOn:
    id: tab-notifications
- assertVisible: Notifications
- tapOn:
    id: tab-menu
- assertVisible: Menu
- tapOn:
    id: tab-home
- tapOn:
    id: header-search
- assertVisible: Search
